changed map label style and map height

--- a/index.html
+++ b/index.html
@@ -141,10 +141,12 @@
 					</div>
 				</div>
 				<div class="grid_3">
-					<div class="box maxheight">
-						<img src="images/streetfoods/donut.jpg" alt="">
-						<div class="text1"><a href="streetfood.html">Donut</a></div>Beschreibung
-					</div>
+					<a href="streetfood.html">
+						<div class="box maxheight">
+							<img src="images/streetfoods/donut.jpg" alt="">
+							<div class="text1">Donut</div>Beschreibung
+						</div>
+					</a>
 				</div>
 				<div class="grid_3">
 					<div class="box maxheight">
