--- a/streetfood.html
+++ b/streetfood.html
@@ -123,11 +123,12 @@
 			<h2 style="padding-top:0px"> Weltkarte </h2>
 			<h4> Erforsche den Trend des Donuts mit der interaktiven Weltkarte </h4>
 			<div class="container_12";>
-				
+				<div id="map" style="height: 580px">
 					<script type="text/javascript">
 						loadWorldmap();
 					</script>
-			</div>	
+				</div>
+			</div>
 		</div>
 		<div id="page03" class="content" style="padding-top:100px">
 			<h2 style="padding-top:0px"> Verlaufslinie </h2>
