--- a/index.html
+++ b/index.html
@@ -150,20 +150,20 @@
 				</div>
 				<div class="grid_3">
 					<div class="box maxheight">
-						<img src="images/box_img2.jpg" alt="">
+						<img src="images/team/placeholder.jpg" alt="">
 						<div class="text1"><a href="#">Streetfood2</a></div> Beschreibung
 					</div>
 				</div>
 				<div class="grid_3">
 					<div class="box maxheight">
-						<img src="images/box_img3.jpg" alt="">
+						<img src="images/team/placeholder.jpg" alt="">
 						<div class="text1"><a href="#">Streetfood3</a></div>Beschreibung
 		
 					</div>
 				</div>
 				<div class="grid_3">
 					<div class="box maxheight">
-						<img src="images/box_img4.jpg" alt="">
+						<img src="images/team/placeholder.jpg" alt="">
 						<div class="text1"><a href="#">Streetfood4</a></div>Beschreibung
 					</div>
 				</div>
@@ -171,53 +171,58 @@
 		</div>
 		
 		<div id="page4" class="content">
-			<div class="container_12">
-				<div class="grid_12">
-					<h3>Das Team</h3>
-					<div class="companies">
-						<div class="grid_3">
-							<img src="images/logo7.jpg" alt="">
-							<div class="text1">Peter Gloor (Dozent)</div>..liebt Streetfood.
+				<div class="container_12">
+				<h3>Das Team</h3>
+					<div class="grid_12">
+						<div class="companies">
+							<div class="grid_3" style="margin-left:110px">
+								<img src="images/team/placeholder.jpg" alt="Michael Henniger">
+								<div class="text1">Michael Henniger (Couch)</div>
+							</div>
+							<div class="grid_3">
+								<img src="images/team/peter.jpg" alt="Peter Gloor">
+								<div class="text1">Peter Gloor (Projektleitung)</div>
+							</div>
+							<div class="grid_3">
+								<img src="images/team/gloria.jpg" alt="Gloria Volkmann">
+								<div class="text1">Gloria Volkmann (Projektbetreuung)</div>
+							</div>
 						</div>
-						<div class="grid_3">
-							<img src="images/logo8.jpg" alt="">
-							<div class="text1">Matthias (Couch)</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-							<img src="images/logo8.jpg" alt="">
-							<div class="text1">Gloria Volkmann</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-							<img src="images/logo1.jpg" alt="">
-							<div class="text1">Celine</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-							<img src="images/logo2.jpg" alt="">
-							<div class="text1">Kseniya </div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-							<img src="images/logo3.jpg" alt="">
-							<div class="text1">Matthias</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-							<img src="images/logo3.jpg" alt="">
-							<div class="text1">Mergim</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-							<img src="images/logo4.jpg" alt="">
-							<div class="text1">Oliver</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-								<img src="images/logo5.jpg" alt="">
-								<div class="text1">Thomas</div>..liebt Streetfood.
-						</div>
-						<div class="grid_3">
-								<img src="images/logo6.jpg" alt="">
-								<div class="text1">Tobias</div>..liebt Streetfood.
+					</div>
+
+					<div class="grid_12">
+						<div class="companies">
+							<div class="grid_3">
+								<img src="images/team/celine.jpg" alt="Celine Solenthaler">
+								<div class="text1">Celine Solenthaler</div>
+							</div>
+							<div class="grid_3">
+								<img src="images/team/placeholder.jpg" alt="Kseniya Barg">
+								<div class="text1">Kseniya Barg</div>
+							</div>
+							<div class="grid_3">
+								<img src="images/team/placeholder.jpg" alt="Matthias Hug">
+								<div class="text1">Matthias Hug</div>
+							</div>
+							<div class="grid_3">
+								<img src="images/team/mergim.jpg" alt="Mergim Alija">
+								<div class="text1">Mergim Alija</div>
+							</div>
+							<div class="grid_3">
+								<img src="images/team/oliver.jpg" alt="Oliver Hub">
+								<div class="text1">Oliver Huber</div>
+							</div>
+							<div class="grid_3">
+									<img src="images/team/placeholder.jpg" alt="Thomas Roth">
+									<div class="text1">Thomas Roth</div>
+							</div>
+							<div class="grid_3">
+									<img src="images/team/placeholder.jpg" alt="Tobias Kohler">
+									<div class="text1">Tobias Kohler</div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 		</div>
 		<div id="page5" class="content">
 			<div class="container_12">
@@ -239,7 +244,6 @@
 								MIT Center for Collective Intelligence<br>
 								245 First Street<br>
 								Cambridge, MA 02142<br>
-								Cambridge, MA 02142<br>
 								</dt>
 								<dd><span>Telephone:</span>+1 617 253 7018</dd>
 								<dd>E-mail: <a href="#" class="link-1">pgloor@mit.edu</a></dd>
@@ -249,7 +253,7 @@
 					<div class="grid_3">
 						<div class="text1">&nbsp;</div>
 						<figure class="">
-							<iframe src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.0120775197893!2d-71.08126708465919!3d42.36358187918657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370a364b2fb41%3A0x5c698304fd4ec154!2s245+First+St%2C+Cambridge%2C+MA+02142%2C+USA!5e0!3m2!1sde!2sde!4v1464287108057" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</figure>
 					</div>
 					<div class="grid_5 prefix_1">
