--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 		</div>
 		<div id="page2" class="content">
 			<div class="container_12">
+
 				<div class="grid_12">
 					<div class="slogan">
 						<h3>Erforsche den Trend</h3>
@@ -163,10 +164,10 @@
 				</div>
 				<div class="grid_3">
 					<div class="box maxheight">
-						<img src="images/team/placeholder.jpg" alt="">
-						<div class="text1"><a href="#">Streetfood4</a></div>Beschreibung
+						<a class="twitter-timeline" href="https://twitter.com/hashtag/streetfood" data-widget-id="735905969977298944">#streetfood-Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</div>
 				</div>
+
 			</div>
 		</div>
 		
@@ -288,6 +289,7 @@
 		<footer>
 			<div class="container_12">
 				<div class="grid_12">
+
 				</div>
 				<div class="clear"></div>
 			</div>
