--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 							<ul class="sf-menu">
 								<li class="current men"><a onClick="goToByScroll('page1'); return false;" href="#">Streetfood</a> <strong class="hover"></strong></li>
 								<li class="men1"><a onClick="goToByScroll('page2'); return false;" href="#">Erforsche den Trend</a><strong class="hover"></strong></li>
-								<li class=" men3"><a onClick="goToByScroll('page4'); return false;" href="#">Team</a> <strong class="hover"></strong></li>
+								<li class="men1"><a onClick="goToByScroll('page3'); return false;" href="#">Die Crowd</a><strong class="hover"></strong></li>
+								<li class=" men3"><a onClick="goToByScroll('page4'); return false;" href="#">Das Team</a> <strong class="hover"></strong></li>
 								<li class=" men4"><a onClick="goToByScroll('page5'); return false;" href="#">Kontakt</a> <strong class="hover"></strong></li>
 							</ul>
 						</nav>
@@ -164,10 +165,21 @@
 				</div>
 				<div class="grid_3">
 					<div class="box maxheight">
-						<a class="twitter-timeline" href="https://twitter.com/hashtag/streetfood" data-widget-id="735905969977298944">#streetfood-Tweets</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 					</div>
 				</div>
 
+			</div>
+			
+		</div>
+
+		<div id="page3" class="content">
+			<div class="container_12">
+			<h3> Die Crowd </h3>
+			<h4> Was sagt die Crowd aktuell zum Thema #Streetfood? </h4>
+			<a class="twitter-timeline" href="https://twitter.com/hashtag/streetfood" data-widget-id="735905969977298944" data-chrome="nofooter;transparent;noheader" width="960px">#streetfood-Tweets
+			</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			<div style="padding-bottom:150px"> </div>
 			</div>
 		</div>
 		
