--- a/index.html
+++ b/index.html
@@ -177,10 +177,12 @@
 			<div class="container_12">
 			<h3> Die Crowd </h3>
 			<h4> Was sagt die Crowd aktuell zum Thema #Streetfood? </h4>
-			<a class="twitter-timeline" href="https://twitter.com/hashtag/streetfood" data-widget-id="735905969977298944" data-chrome="nofooter;transparent;noheader" width="960px">#streetfood-Tweets
-			</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			<div style="padding-top:50px"></div>
+			<a class="twitter-timeline" href="https://twitter.com/search?q=%23Streetfood%20lang%3Ade" data-widget-id="736208669038288896"
+			data-chrome="nofooter;transparent;noheader" width="960px">Tweets über #Streetfood lang:de </a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			<div style="padding-bottom:150px"> </div>
 			</div>
+
 		</div>
 		
 		<div id="page4" class="content">
