BugFix Hover Effekt+Fotos Team

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<ul class="sf-menu">
 								<li class="current men"><a onClick="goToByScroll('page1'); return false;" href="#">Streetfood</a> <strong class="hover"></strong></li>
 								<li class="men1"><a onClick="goToByScroll('page2'); return false;" href="#">Erforsche den Trend</a><strong class="hover"></strong></li>
-								<li class="men1"><a onClick="goToByScroll('page3'); return false;" href="#">Die Crowd</a><strong class="hover"></strong></li>
+								<li class="men2"><a onClick="goToByScroll('page3'); return false;" href="#">Die Crowd</a><strong class="hover"></strong></li>
 								<li class=" men3"><a onClick="goToByScroll('page4'); return false;" href="#">Das Team</a> <strong class="hover"></strong></li>
 								<li class=" men4"><a onClick="goToByScroll('page5'); return false;" href="#">Kontakt</a> <strong class="hover"></strong></li>
 							</ul>
@@ -191,7 +191,7 @@
 					<div class="grid_12">
 						<div class="companies">
 							<div class="grid_3" style="margin-left:110px">
-								<img src="images/team/placeholder.jpg" alt="Michael Henniger">
+								<img src="images/team/michael.jpg" alt="Michael Henniger">
 								<div class="text1">Michael Henniger (Couch)</div>
 							</div>
 							<div class="grid_3">
@@ -223,12 +223,12 @@
 								<img src="images/team/mergim.jpg" alt="Mergim Alija">
 								<div class="text1">Mergim Alija</div>
 							</div>
-							<div class="grid_3">
+							<div class="grid_3" style="margin-left:110px">
 								<img src="images/team/oliver.jpg" alt="Oliver Hub">
 								<div class="text1">Oliver Huber</div>
 							</div>
 							<div class="grid_3">
-									<img src="images/team/placeholder.jpg" alt="Thomas Roth">
+									<img src="images/team/thomas.jpg" alt="Thomas Roth">
 									<div class="text1">Thomas Roth</div>
 							</div>
 							<div class="grid_3">
