--- a/streetfood.html
+++ b/streetfood.html
@@ -1,150 +1,185 @@
 <!DOCTYPE html>
 <html lang="de">
-	<head>
-		<meta charset="utf-8">
-		<title>Streetfood</title>
-		<link rel="icon" href="images/favicon.ico">
-		<link rel="shortcut icon" href="images/favicon.ico" />
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/camera.css">
-		<link rel="stylesheet" href="css/form.css">
-		<link rel="stylesheet" href="css/worldmap.css">
-		<link rel="stylesheet" href="css/lineChart.css">
-		<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<script src="https://d3js.org/topojson.v1.min.js"></script>
-		<script src="js/worldmap.js"></script>
-		<script src="js/jquery.js"></script>
-		<script src="js/jquery-migrate-1.1.1.js"></script>
-		<script src="js/superfish.js"></script>
-		<script src="js/forms.js"></script>
-		<script src="js/jquery.ui.totop.js"></script>
-		<script src="js/jquery.equalheights.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.ui.totop.js"></script>
-		<script src="js/tms-0.4.1.js"></script>
-		<script src="js/lineChart.js"></script>
+<head>
+    <meta charset="utf-8">
+    <title>Streetfood</title>
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/camera.css">
+    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/worldmap.css">
+    <link rel="stylesheet" href="css/lineChart.css">
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
+    <script src="js/worldmap.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery-migrate-1.1.1.js"></script>
+    <script src="js/superfish.js"></script>
+    <script src="js/forms.js"></script>
+    <script src="js/jquery.ui.totop.js"></script>
+    <script src="js/jquery.equalheights.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/jquery.ui.totop.js"></script>
+    <script src="js/tms-0.4.1.js"></script>
+    <script src="js/lineChart.js"></script>
 
-		<script>
+    <script>
 
-			var foodName = "Doughnut";
+        var foodName = "Doughnut";
 
-			$(document).ready(function(){
+        $(document).ready(function () {
 
-				createChart(foodName, "lineChart");
+            createChart(foodName, "lineChart");
 
-				$('.slider_wrapper')._TMS({
-					show:0,
-					pauseOnHover:false,
-					prevBu:'.prev',
-					nextBu:'.next',
-					playBu:false,
-					duration:800,
-					preset:'fade',
-					pagination:true,//'.pagination',true,'<ul></ul>'222
-					pagNums:false,
-					slideshow:8000,
-					numStatus:false,
-					banners: 'fade',
-					waitBannerAnimation:false,
-					progressBar:false
-				});
-			});
-			$(document).ready(function(){
-				!function(){
-			var map=[]
-			 ,names=[]
-			 ,win=$(window)
-			 ,header=$('header')
-			 ,currClass
-			$('.content').each(function(n){
-			 map[n]=this.offsetTop
-			 names[n]=$(this).attr('id')
-			})
-			win
-			 .on('scroll',function(){
-				var i=0
-				while(map[i++]<=win.scrollTop());
-				if(currClass!==names[i-2])
-				currClass=names[i-2]
-				header.removeAttr("class").addClass(names[i-2])
-			 })
-			}(); });
-					function goToByScroll(id){
-				$('html,body').animate({scrollTop: $("#"+id).offset().top},'slow');
-				}
-				$(document).ready(function(){
-					$().UItoTop({ easingType: 'easeOutQuart' });
-				});
-		</script>
-		<!--[if lt IE 8]>
-			<div style=' clear: both; text-align:center; position: relative;'>
-				<a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-					<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-				</a>
-			</div>
-		<![endif]-->
-		<!--[if lt IE 9]>
-			<script src="js/html5shiv.js"></script>
-			<link rel="stylesheet" media="screen" href="css/ie.css">
-		<![endif]-->
-	</head>
-	<body class="">
+            $('.slider_wrapper')._TMS({
+                show: 0,
+                pauseOnHover: false,
+                prevBu: '.prev',
+                nextBu: '.next',
+                playBu: false,
+                duration: 800,
+                preset: 'fade',
+                pagination: true,//'.pagination',true,'<ul></ul>'222
+                pagNums: false,
+                slideshow: 8000,
+                numStatus: false,
+                banners: 'fade',
+                waitBannerAnimation: false,
+                progressBar: false
+            });
+        });
+        $(document).ready(function () {
+            !function () {
+                var map = []
+                        , names = []
+                        , win = $(window)
+                        , header = $('header')
+                        , currClass
+                $('.content').each(function (n) {
+                    map[n] = this.offsetTop
+                    names[n] = $(this).attr('id')
+                })
+                win
+                        .on('scroll', function () {
+                            var i = 0
+                            while (map[i++] <= win.scrollTop());
+                            if (currClass !== names[i - 2])
+                                currClass = names[i - 2]
+                            header.removeAttr("class").addClass(names[i - 2])
+                        })
+            }();
+        });
+        function goToByScroll(id) {
+            $('html,body').animate({scrollTop: $("#" + id).offset().top}, 'slow');
+        }
+        $(document).ready(function () {
+            $().UItoTop({easingType: 'easeOutQuart'});
+        });
+    </script>
+    <!--[if lt IE 8]>
+    <div style=' clear: both; text-align:center; position: relative;'>
+        <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
+            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0"
+                 height="42" width="820"
+                 alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
+        </a>
+    </div>
+    <![endif]-->
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <link rel="stylesheet" media="screen" href="css/ie.css">
+    <![endif]-->
+</head>
+<body class="">
 <!--==============================header=================================-->
-		<header class="page1">
-			<div class="container_12">
-				<div class="grid_12">
-					<h1><a href="#" onClick="goToByScroll('page1'); return false;"><img src="images/logo.png" alt="Streetfood"></a></h1>
-					<div class="menu_block">
-						<nav class="">
-							<ul class="sf-menu">
-								<li class="current men"><a onClick="goToByScroll('page01'); return false;" href="#">Details</a> <strong class="hover"></strong></li>
-								<li class="men2"><a onClick="goToByScroll('page02'); return false;" href="#">Weltkarte</a> <strong class="hover"></strong></li>
-								<li class="men3"><a onClick="goToByScroll('page03'); return false;" href="#">Verlaufslinie</a> <strong class="hover"></strong></li>
-								<li class="men4"><a href="index.html">Zurück zur Startseite</a> <strong class="hover"></strong></li>
-							</ul>
-						</nav>
-						<div class="clear"></div>
-					</div>
-				</div>
-				<div class="clear"></div>
-			</div>
-		</header>
+<header class="page1">
+    <div class="container_12">
+        <div class="grid_12">
+            <h1><a href="#" onClick="goToByScroll('page1'); return false;"><img src="images/logo.png" alt="Streetfood"></a>
+            </h1>
+
+            <div class="menu_block">
+                <nav class="">
+                    <ul class="sf-menu">
+                        <li class="current men"><a onClick="goToByScroll('page1'); return false;" href="#">Details</a>
+                            <strong class="hover"></strong></li>
+                        <li class="men1"><a onClick="goToByScroll('page2'); return false;" href="#">Weltkarte</a>
+                            <strong class="hover"></strong></li>
+                        <li class="men2"><a onClick="goToByScroll('page3'); return false;" href="#">Verlauf</a>
+                            <strong class="hover"></strong></li>
+                        <li class="men3"><a href="index.html">Zurück zur Startseite</a> <strong class="hover"></strong>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
+</header>
 <!--=======content================================-->
-		<div id="page01" class="content">
-			<div class="container_12">
-				<h2 style="padding-top:0px"> Details </h2>
-					<div id="streetfood_detailview">
-						 	<img src="images/streetfoods/donut.jpg"/>
-						 	<p style="text-align:left; font-size:auto;"> Ein Donut (eigentlich doughnut, dt. „Teignuss“) ist ein handtellergroßer amerikanischer/kanadischer Krapfen aus Hefeteig oder Rührteig (auch Schmalzgebäckkringel oder Lochkrapfen genannt). Die Form ist entweder ein Torus (Ring ähnlich einem Bagel) oder – seltener – ein abgeflachter Ballen, der häufig Schokolade oder eine andere süße Füllung enthält. </p>
-					</div>
-			</div>	
-		</div>
-		<div id="page02" class="content" style="padding-top:100px">
-			<h2 style="padding-top:0px"> Weltkarte </h2>
-			<h4> Erforsche den Trend des Donuts mit der interaktiven Weltkarte </h4>
-			<div class="container_12";>
-				<div id="map" style="height: 580px">
-					<script type="text/javascript">
-						loadWorldmap();
-					</script>
-				</div>
-			</div>
-		</div>
-		<div id="page03" class="content" style="padding-top:100px">
-			<h2 style="padding-top:0px"> Verlaufslinie </h2>
-			<h4> Schaue dir die Verlaufslinie an</h4>
-			<div id="lineChart" class="container_12";>
-				
-					<p> MODUL </p>
-			</div>	
-		</div>
+<!-- - - - - - - - Page 1: Details - - - - - - - - - - - - - -->
+
+<div id="page1" class="content">
+    <div class="container_12">
+        <div class="slogan">
+            <h3> Details </h3>
+
+            <div id="streetfood_detailview">
+                <img src="images/streetfoods/donut.jpg"/>
+
+                <div class="description"> Ein Donut (eigentlich doughnut, dt. „Teignuss“) ist ein handtellergroßer
+                    amerikanischer/kanadischer Krapfen aus Hefeteig oder Rührteig (auch Schmalzgebäckkringel oder
+                    Lochkrapfen genannt). Die Form ist entweder ein Torus (Ring ähnlich einem Bagel) oder – seltener –
+                    ein abgeflachter Ballen, der häufig Schokolade oder eine andere süße Füllung enthält. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- - - - - - - - Page 2: Map - - - - - - - - - - - - - -->
+<div id="page2" class="content">
+    <div class="container_12">
+
+        <div class="slogan">
+            <h3> Weltkarte </h3>
+
+            <div class="text1">Erforsche den Trend des Donuts mit der interaktiven Weltkarte</div>
+        </div>
+        <div class="container_12">
+            <div id="map" style="height: 580px">
+                <script type="text/javascript">
+                    loadWorldmap();
+                </script>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- - - - - - - - Page 3: History - - - - - - - - - - - - - -->
+<div id="page3" class="content">
+    <div class="container_12">
+
+        <div class="slogan">
+            <h3> Verlauf </h3>
+
+            <div class="text1">Verfolge den Trend im Laufe der Zeit</div>
+        </div>
+        <div id="lineChart" class="container_12">
+        </div>
+    </div>
+</div>
 <!--==============================footer=================================-->
-		<footer>
-			<div class="container_12">
-				<div class="grid_12">
-				</div>
-				<div class="clear"></div>
-			</div>
-		</footer>
-	</body>
+<footer>
+    <div class="container_12">
+        <div class="grid_12">
+        <div class="maxfooter"></div>
+        </div>
+        <div class="clear"></div>
+    </div>
+</footer>
+</body>
 </html>
