--- a/streetfood.html
+++ b/streetfood.html
@@ -150,7 +150,7 @@
             <div class="text1">Erforsche den Trend des Donuts mit der interaktiven Weltkarte</div>
         </div>
         <div class="container_12">
-            <div id="map" style="height: 580px">
+            <div id="map">
                 <script type="text/javascript">
                     loadWorldmap();
                 </script>
