Hover effect on streetfood selection

--- a/streetfood.html
+++ b/streetfood.html
@@ -96,7 +96,7 @@
 <header class="page1">
     <div class="container_12">
         <div class="grid_12">
-            <h1><a href="#" onClick="goToByScroll('page1'); return false;"><img src="images/logo.png" alt="Streetfood"></a>
+            <h1><a href="index.html"><img src="images/logo.png" alt="Streetfood"></a>
             </h1>
 
             <div class="menu_block">
@@ -128,7 +128,7 @@
             <h3> Details </h3>
 
             <div id="streetfood_detailview">
-                <img src="images/streetfoods/donut.jpg"/>
+                <div class="img"><img src="images/streetfoods/donut.jpg"/></div>
 
                 <div class="description"> Ein Donut (eigentlich doughnut, dt. „Teignuss“) ist ein handtellergroßer
                     amerikanischer/kanadischer Krapfen aus Hefeteig oder Rührteig (auch Schmalzgebäckkringel oder
