--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
     <script src="js/tms-0.4.1.js"></script>
+
+
     <script>
         $(document).ready(function () {
             $('.slider_wrapper')._TMS({
@@ -145,6 +147,7 @@
     </div>
 </div>
 <div id="page2" class="content">
+
     <div class="container_12">
 
         <div class="grid_12">
@@ -155,40 +158,45 @@
                     mit prägnanten Beschreibungen zu allen möglichen Streetfoods
                 </div>
             </div>
-        </div>
-        <div class="grid_3">
-            <a href="streetfood.html">
-                <div class="box maxheight">
-                    <img src="images/streetfoods/donut.jpg" alt="">
 
-                    <div class="text1">Donut</div>
+            <div class="streetfoods">
+                <div class="streetfood">
+                    <a href="streetfood.html">
+                        <img src="images/streetfoods/donut.jpg" alt="">
 
+                        <div class="text1">Donut 1</div>
+                    </a>
                 </div>
-            </a>
-        </div>
-        <div class="grid_3">
-            <div class="box maxheight">
-                <img src="images/team/placeholder.jpg" alt="">
+                <div class="streetfood">
+                    <a href="streetfood.html">
+                        <img src="images/streetfoods/donut.jpg" alt="">
 
-                <div class="text1"><a href="#">Streetfood2</a></div>
+                        <div class="text1">Donut 2</div>
+                    </a>
+                </div>
+                <div class="streetfood">
+                    <a href="streetfood.html">
+                        <img src="images/streetfoods/donut.jpg" alt="">
 
+                        <div class="text1">Donut 3</div>
+                    </a>
+                </div>
+                <div class="streetfood">
+                    <a href="streetfood.html">
+                        <img src="images/streetfoods/donut.jpg" alt="">
+
+                        <div class="text1">Donut 4</div>
+                    </a>
+                </div>
+                <div class="streetfood">
+                    <a href="streetfood.html">
+                        <img src="images/streetfoods/donut.jpg" alt="">
+
+                        <div class="text1">Donut 5</div>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="grid_3">
-            <div class="box maxheight">
-                <img src="images/team/placeholder.jpg" alt="">
-
-                <div class="text1"><a href="#">Streetfood3</a></div>
-
-
-            </div>
-        </div>
-        <div class="grid_3">
-            <div class="box maxheight">
-
-            </div>
-        </div>
-
     </div>
 
 </div>
