--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
     <script src="js/tms-0.4.1.js"></script>
+    <script type="text/javascript" src="js/instafeed.min.js"></script>
 
 
     <script>
@@ -206,7 +207,9 @@
         <div class="slogan">
             <h3> Die Crowd </h3>
 
-            <div class="text1">Was sagt die Crowd aktuell zum Thema #Streetfood?</div>
+            <div class="text1">Was sagt die Crowd in Twitter aktuell zum Thema #Streetfood?
+            </div>
+            <div class="text1"> Siehe auch <a href="Crowd_Instagram.html" style="color:white;font:30px">Instagram </a></div> 
         </div>
         <div class="twitter">
             <a class="twitter-timeline" href="https://twitter.com/search?q=%23Streetfood%20lang%3Ade"
