--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 </div>
 
                 <div class="grid_3">
-                    <img src="images/team/placeholder.jpg" alt="Matthias Hug">
+                    <img src="images/team/matthias.jpg" alt="Matthias Hug">
 
                     <div class="text1">Matthias Hug</div>
                 </div>
