re-added streetfood-data.js

--- a/streetfood.html
+++ b/streetfood.html
@@ -23,6 +23,7 @@
     <script src="js/jquery.ui.totop.js"></script>
     <script src="js/tms-0.4.1.js"></script>
     <script src="js/lineChart.js"></script>
+    <script src="js/streetfood-data.js"></script>
 
     <script>
 
