--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
     <script src="js/tms-0.4.1.js"></script>
-    <script type="text/javascript" src="js/instafeed.min.js"></script>
+    <script src="js/instafeed.min.js"></script>
 
     <script src="js/streetfood-data.js"></script>
 
