--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
 
                 <div class="grid_3">
-                    <img src="images/team/placeholder.jpg" alt="Kseniya Barg">
+                    <img src="images/team/kseniya.jpg" alt="Kseniya Barg">
 
                     <div class="text1">Kseniya Barg</div>
                 </div>
